# polymarket-streak-bot

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  backtest_engine.py  bot.py  config.py  copybot.py  copybot_v2.py  copytrade.py  flake.nix  history.py  polymarket.py  pyproject.toml  selective_filter.py  trader.py
examples/custom_strategy/: pyproject.toml
indicators/: __init__.py
scripts/: run_backtests.py
src/: config.py
src/core/: blockchain.py
strategies/: __init__.py  candle_direction.py
tests/: test_executor_imports.py
