[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "py-clob-client>=0.34.5",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "urllib3>=2.0.0",
    "web3>=7.14.1",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
]
